<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.core.content.ContextCompat" />
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="br.com.alexander.awesomemovieapp.MovieViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".movieDetails.MovieDetailsFragment">

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcUrl='@{viewModel.movieDetailsLiveData.getImageUrl ?? ""}'
            tools:src="@drawable/movie"/>

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="22dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/movie_image"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@{viewModel.movieDetailsLiveData.getTitleString(context)}"
            tools:text="@string/movie_title_example"/>

        <TextView
            android:id="@+id/movie_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            tools:text="@string/movie_categories_example"
            android:text="@{viewModel.movieDetailsLiveData.getGenresString()}"
            android:textColor="#979797"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/movie_rating"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_image" />

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            tools:text="@string/rating_example"
            android:text="@{viewModel.movieDetailsLiveData.getRatingString()}"
            android:textColor="#979797"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/movie_categories"
            app:layout_constraintTop_toBottomOf="@id/movie_image" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/movie_desc_scroll"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@id/posters_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_rating">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lineSpacingExtra="3sp"
                    android:text="@{viewModel.movieDetailsLiveData.getDescription(context)}"
                    tools:text="@string/movie_desc_example"
                    android:textColor="#ddd"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/posters_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/posters"
            android:textAllCaps="true"
            android:textColor="#ddd"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_desc_scroll" />


        <org.imaginativeworld.whynotimagecarousel.ImageCarousel
            android:id="@+id/movie_carousel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/posters_label"
            app:imageScaleType="fitCenter"
            app:autoPlay="true"
            app:autoPlayDelay="4000"
            app:infiniteCarousel="true"
            app:touchToPause="true"
            app:autoWidthFixing="true" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>