<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.core.content.ContextCompat" />
        <variable
            name="movieItem"
            type="br.com.alexander.awesomemovieapp.data.Movie" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#262626"
        android:backgroundTint="#262626">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/movie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text='@{movieItem.getTitleString(context)}'
                    tools:text="@string/movie_title_example"/>

                <ImageView
                    android:id="@+id/cover_image"
                    android:layout_width="104dp"
                    android:layout_height="140dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@+id/see_more"
                    app:layout_constraintStart_toStartOf="@id/movie_name"
                    app:layout_constraintTop_toTopOf="@id/movie_synopsis"
                    app:srcUrl='@{movieItem.imageUrl ?? ""}'
                    tools:srcCompat="@drawable/movie_cover" />

                <TextView
                    android:id="@+id/movie_synopsis"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:ellipsize="end"
                    android:maxLength="140"
                    android:maxLines="4"
                    android:lines="4"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cover_image"
                    app:layout_constraintTop_toBottomOf="@id/movie_name"
                    app:layout_constraintBottom_toTopOf="@id/see_more"
                    android:text="@{movieItem.getDescription(context)}"
                    tools:text="@string/movie_desc_example" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/see_more"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:textColor="@color/white"
                    android:text="@string/see_more"
                    app:cornerRadius="5dp"
                    app:layout_constraintBottom_toBottomOf="@id/share_button"
                    app:layout_constraintEnd_toStartOf="@id/share_button"
                    app:layout_constraintStart_toStartOf="@id/movie_synopsis"
                    app:layout_constraintTop_toBottomOf="@id/movie_synopsis"
                    app:layout_constraintTop_toTopOf="@id/share_button"
                    app:strokeColor="@color/white"
                    app:strokeWidth="2dp" />

                <ImageButton
                    android:id="@+id/share_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icon_share_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/movie_synopsis"
                    app:layout_constraintStart_toEndOf="@id/see_more"
                    app:layout_constraintTop_toBottomOf="@id/movie_synopsis" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</layout>